Fix z-index on can't think page
Because why would I be able to test if I'm not able to think?

--- a/sass/includes/_cant-think-page.sass
+++ b/sass/includes/_cant-think-page.sass
@@ -74,6 +74,7 @@ $_theme: () !default
 
     &:target
       position: fixed
+      z-index: 1
       top: 0
       bottom: 0
       left: 0
